fix horizontal scrolling caused by long links

--- a/themes/solid/static/css/style.css
+++ b/themes/solid/static/css/style.css
@@ -181,6 +181,11 @@ a:hover, a:focus {
 	color: #01b2fe;
 }
 
+.footnote a {
+	word-break: break-word;
+}
+
+
 /*	################################################################
 	SITE WRAPS
 	################################################################# */
